[tool.poetry]
name = "scikit-advance"
version = "0.0.0"
description = "Components to advance your use of scikit-learn"
authors = ["Jeremy Heffner"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jerheff/scikit-advance"
keywords = ['scikit-learn', 'data science', 'machine learning']
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    {include = "skadvance"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.0"
numpy = "^1.21"
scipy = "^1.6"

[tool.poetry.dev-dependencies]
coveralls = "^3.3.1"
pytest = "^7.1"
pytest-cov = "^3.0.0"
prospector = {extras = ["with_mypy", "with_bandit"], version = "^1.7.7"}
black = "^22.3.0"

[tool.black]
target-version = ['py39']
required-version = '22'

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
